Revision history for Net-Gitlab

{{$NEXT}}

0.08 2018-09-06

 - Utilize the x_deprecated META flag.

0.07 2018-09-06

 - Oh, add (DEPRECATED) to the abstract.
 - Fix $VERSION declaration.

0.06 2018-09-06

 - Add deprecation notice, telling users to check out GitLab::API::v4 instead.

0.05      2014-10-07 04:45:58+00:00 UTC

0.04      2014-09-03 04:28:17+00:00 UTC

0.03      2012-12-28 14:39:06 America/Boise
  - add password length checking

0.02      2012-12-25 20:36:13 America/Boise
  - fix stupid error in parm handling
  - force module prereq that dzil wasnt finding 

0.01      2012-12-21 20:25:37 America/Boise
  - Initial Creation