@@ -1,3 +1,0 @@
-dist.ini
-MANIFEST.SKIP
-author
