@@ -1,7 +1,0 @@
-name    = Net-Gitlab
-author  = Alan Young <harleypig@gmail.com>
-license = Perl_5
-copyright_holder = Alan Young
-
-[@Author::BLUEFEET]
-[Deprecated]
