@@ -1,0 +1,6 @@
+name = "Net-Gitlab"
+authority="cpan:BLUEFEET"
+tag_format="v%v"
+
+[Metadata]
+x_deprecated = 1
