@@ -2,6 +2,8 @@ Revision history for Net-Gitlab
 
 {{$NEXT}}
 
+ - Migrate build tooling from Dist::Zilla to Minilla.
+
 0.08 2018-09-06
 
  - Utilize the x_deprecated META flag.
